<resources>
    <string name="app_name">资讯站</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_please_input_username">请输入用户名</string>
    <string name="login_please_input_password">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="login_or">或</string>
    <string name="the_account_cannot_be_empty">账号不能为空</string>
    <string name="the_password_cannot_be_empty">密码不能为空</string>
    <string name="the_account_or_password_error">账号或密码错误</string>
    <string name="email_or_phone">邮箱/手机号</string>
    <string name="input_password">输入密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="the_account_or_password_cannot_be_empty">用户名或密码不能为空</string>
    <string name="affirm_password_unable">确认密码不能为空</string>
    <string name="the_passwords_entered_are_inconsistent">两次密码不一致</string>

    <string name="exit_again">"再按一次退出程序"</string>

    <string name="setting">设置</string>
</resources>
