<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.login.LoginActivity">

    <!--登录-->
    <TextView
        android:id="@+id/ac_login_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/text_333333"
        android:textSize="@dimen/sp_22"
        android:layout_marginTop="@dimen/dp_100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <daiw.com.informationsite.view.custom.edittext.CustomEditTextLogin
        android:id="@+id/ac_login_username_custom"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android_custom:editHint="@string/login_please_input_username"
        android_custom:editBackground="@drawable/vector_drawable_svg_login_username"
        android_custom:editTextColor="@color/text_333333"
        android_custom:editTextColorHint="@color/text_999999"
        android:layout_marginTop="@dimen/dp_80"
        android_custom:editTextSize="@dimen/sp_16"
        android_custom:editInputType="text"
        android_custom:editMaxLines="1"
        android_custom:editMaxLength="15"
        app:layout_constraintTop_toBottomOf="@id/ac_login_title_tv"
        app:layout_constraintLeft_toLeftOf="@id/ac_login_to_register_btn"
        app:layout_constraintRight_toRightOf="@id/ac_login_to_register_btn"/>

    <daiw.com.informationsite.view.custom.edittext.CustomEditTextLogin
        android:id="@+id/ac_login_password_custom"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android_custom:editHint="@string/login_please_input_password"
        android_custom:editBackground="@drawable/vector_drawable_svg_login_password"
        android_custom:editTextColor="@color/text_333333"
        android_custom:editTextColorHint="@color/text_999999"
        android:layout_marginTop="@dimen/dp_10"
        android_custom:editTextSize="@dimen/sp_16"
        android_custom:editInputType="textPassword"
        android_custom:editMaxLines="1"
        android_custom:editMaxLength="15"
        app:layout_constraintTop_toBottomOf="@id/ac_login_username_custom"
        app:layout_constraintLeft_toLeftOf="@id/ac_login_to_register_btn"
        app:layout_constraintRight_toRightOf="@id/ac_login_to_register_btn"/>

    <Button
        android:id="@+id/ac_login_to_login_btn"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/login"
        android:textColor="@color/text_333333"
        android:textSize="@dimen/sp_16"
        android:background="@drawable/bg_conner_bottom_red"
        app:layout_constraintBottom_toTopOf="@id/ac_login_or_tv"
        app:layout_constraintLeft_toLeftOf="@id/ac_login_to_register_btn"
        app:layout_constraintRight_toRightOf="@id/ac_login_to_register_btn" />

    <TextView
        android:id="@+id/ac_login_or_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/login_or"
        android:textColor="@color/text_333333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@id/ac_login_to_register_btn"
        app:layout_constraintLeft_toLeftOf="@id/ac_login_to_register_btn"
        app:layout_constraintRight_toRightOf="@id/ac_login_to_register_btn" />

    <Button
        android:id="@+id/ac_login_to_register_btn"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_100"
        android:text="@string/register"
        android:textColor="@color/text_333333"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_80"
        android:background="@drawable/bg_conner_bottom_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>