<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.register.RegisterActivity">

    <!-- 注册 -->

    <daiw.com.informationsite.view.custom.edittext.CustomEditTextLogin
        android:id="@+id/ac_register_username_custom"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_30"
        android_custom:editBackground="@drawable/vector_drawable_svg_login_username"
        android_custom:editHint="@string/email_or_phone"
        android_custom:editInputType="text"
        android_custom:editMaxLength="15"
        android_custom:editMaxLines="1"
        android_custom:editTextColor="@color/text_333333"
        android_custom:editTextColorHint="@color/text_999999"
        android_custom:editTextSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@id/ac_register_password_custom"
        app:layout_constraintLeft_toLeftOf="@id/ac_register_btn"
        app:layout_constraintRight_toRightOf="@id/ac_register_btn" />

    <daiw.com.informationsite.view.custom.edittext.CustomEditTextLogin
        android:id="@+id/ac_register_password_custom"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android_custom:editBackground="@drawable/vector_drawable_svg_login_password"
        android_custom:editHint="@string/input_password"
        android_custom:editInputType="textPassword"
        android_custom:editMaxLength="15"
        android_custom:editMaxLines="1"
        android_custom:editTextColor="@color/text_333333"
        android_custom:editTextColorHint="@color/text_999999"
        android_custom:editTextSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/ac_register_btn"
        app:layout_constraintRight_toRightOf="@id/ac_register_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <daiw.com.informationsite.view.custom.edittext.CustomEditTextLogin
        android:id="@+id/ac_register_password_custom_again"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android_custom:editBackground="@drawable/vector_drawable_svg_login_password"
        android_custom:editHint="@string/affirm_password"
        android_custom:editInputType="textPassword"
        android_custom:editMaxLength="15"
        android_custom:editMaxLines="1"
        android_custom:editTextColor="@color/text_333333"
        android_custom:editTextColorHint="@color/text_999999"
        android_custom:editTextSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="@id/ac_register_btn"
        app:layout_constraintRight_toRightOf="@id/ac_register_btn"
        app:layout_constraintTop_toBottomOf="@id/ac_register_password_custom" />

    <Button
        android:id="@+id/ac_register_btn"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_80"
        android:layout_marginBottom="@dimen/dp_100"
        android:background="@drawable/bg_conner_bottom_blue"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ac_register_password_custom_again" />


</android.support.constraint.ConstraintLayout>